--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "auto-bind": "^4.0.0",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.12",
     "debug": "^4.3.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0"
