--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "debug": "^4.3.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-error": "^0.0.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.5.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.14.2"
   }
 }
