--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "debug": "^4.3.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
